[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/intro.gd" type="Script" id=1]
[ext_resource path="res://sprites/textures.png" type="Texture" id=2]
[ext_resource path="res://scripts/sound.gd" type="Script" id=3]
[ext_resource path="res://sounds/char2.wav" type="Sample" id=4]
[ext_resource path="res://sounds/block_showed.wav" type="Sample" id=5]
[ext_resource path="res://sounds/headphones.wav" type="Sample" id=6]
[ext_resource path="res://sounds/tab_showed.wav" type="Sample" id=7]
[ext_resource path="res://fonts/Pokemon_GB.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scripts/gradual_text.gd" type="Script" id=9]
[ext_resource path="res://shaders/white_sine_anim.tres" type="CanvasItemMaterial" id=10]
[ext_resource path="res://sprites/headphones.png" type="Texture" id=11]

[sub_resource type="SampleLibrary" id=1]

samples/char = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[sub_resource type="SampleLibrary" id=2]

samples/block_showed = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/headphones = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/tab_showed = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}

[sub_resource type="DynamicFont" id=3]

font/size = 34
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 8 )

[node name="intro" type="Node2D"]

script/script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( -9.12247, -14.4399 )
transform/scale = Vector2( 18.7428, 30.9789 )
texture = ExtResource( 2 )
centered = false
modulate = Color( 0, 0, 0, 1 )
region = true
region_rect = Rect2( 0, 0, 24, 24 )

[node name="sound" type="Node2D" parent="." groups=[
"sound",
]]

script/script = ExtResource( 3 )

[node name="stream_player" type="StreamPlayer" parent="sound"]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="env" type="SamplePlayer2D" parent="sound"]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 1 )
config/pitch_random = 0.0

[node name="ui" type="SamplePlayer2D" parent="sound"]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[node name="tabs" type="Node2D" parent="."]

[node name="tab1" type="Node2D" parent="tabs"]

[node name="text" type="Label" parent="tabs/tab1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 52.0
margin/top = 98.0
margin/right = 398.0
margin/bottom = 570.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.961334, 1, 0.292969, 1 )
text = "SINDICATO videogames"
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 9 )
final_text = "SINDICATO videogames"
typing_speed = 0.03

[node name="text1" type="Label" parent="tabs/tab1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 81.0
margin/top = 169.0
margin/right = 427.0
margin/bottom = 641.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "presents"
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tab2" type="Node2D" parent="tabs"]

editor/display_folded = true
visibility/visible = false

[node name="block1" type="Node2D" parent="tabs/tab2"]

editor/display_folded = true
visibility/visible = false

[node name="text" type="Label" parent="tabs/tab2/block1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = -32.0
margin/right = 388.0
margin/bottom = 135.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.938232, 0.28125, 1 )
text = "game by"
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text1" type="Label" parent="tabs/tab2/block1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 63.0
margin/top = 48.0
margin/right = 409.0
margin/bottom = 215.0
custom_fonts/font = SubResource( 3 )
text = "Vlad Lugovskoy"
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="block2" type="Node2D" parent="tabs/tab2"]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 0, 163 )

[node name="text" type="Label" parent="tabs/tab2/block2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = -28.0
margin/right = 388.0
margin/bottom = 139.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.943848, 0.28125, 1, 1 )
text = "music by"
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text1" type="Label" parent="tabs/tab2/block2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 58.0
margin/top = 70.0
margin/right = 404.0
margin/bottom = 392.0
custom_fonts/font = SubResource( 3 )
custom_constants/line_spacing = 11
text = "ERLAX
Dr. Doctor
The 303
Sro
Glass Boy
Humanfobia"
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="block3" type="Node2D" parent="tabs/tab2"]

visibility/visible = false
transform/pos = Vector2( 0, 563 )

[node name="text" type="Label" parent="tabs/tab2/block3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = -52.0
margin/right = 388.0
margin/bottom = 115.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.28125, 0.28125, 1 )
text = "with might of"
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text1" type="Label" parent="tabs/tab2/block3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 69.0
margin/right = 404.0
margin/bottom = 147.0
custom_fonts/font = SubResource( 3 )
custom_constants/line_spacing = 11
text = "GODOT 2"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tab3" type="Node2D" parent="tabs"]

visibility/visible = false

[node name="block1" type="Node2D" parent="tabs/tab3"]

transform/pos = Vector2( 0, -50 )

[node name="headphones" type="Sprite" parent="tabs/tab3/block1"]

material/material = ExtResource( 10 )
transform/pos = Vector2( 100.727, 332.535 )
transform/scale = Vector2( 1.26521, 1.26521 )
texture = ExtResource( 11 )

[node name="text1" type="Label" parent="tabs/tab3/block1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 331.0
margin/right = 445.0
margin/bottom = 498.0
custom_fonts/font = SubResource( 3 )
text = "HEADPHONES 
RECOMMENDED"
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


